[tool.poetry]
name = "pyresumable"
version = "0.0.3"
description = "A library for creating files chunk-by-chunk"
authors = [
    "Leon du Toit <l.c.d.toit@usit.uio.no>",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/unioslo/pyresumable"
packages = [{include = "pyresumable"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
debugpy = "^1.6.3"
debugpy-run = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
